# avrow

./: .gitignore  CHANGELOG.md  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  index.html  rustfmt.toml
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: 1-problem.md  2-suggestion.md  3-documentation.md
.github/workflows/: ci.yml
avrow-cli/: Cargo.toml  README.md
avrow-cli/src/: main.rs  subcommand.rs  utils.rs
benches/: complex.rs  primitives.rs  schema.rs
examples/: canonical.rs  from_json_to_struct.rs  hello_world.rs  recursive_record.rs  writer_builder.rs
src/: codec.rs  config.rs  error.rs  lib.rs  reader.rs  util.rs  value.rs  writer.rs
src/schema/: canonical.rs  common.rs  mod.rs  parser.rs  tests.rs
src/serde_avro/: de.rs  de_impl.rs  mod.rs  ser.rs  ser_impl.rs
tests/: common.rs  read_write.rs  schema_resolution.rs
