[package]
name = "avrow"
version = "0.2.0"
authors = ["creativcoder <creativcoders@gmail.com>"]
edition = "2018"
repository = "https://github.com/creativcoder/avrow"
license = "MIT OR Apache-2.0"
description = "Avrow is a fast, type safe serde based data serialization library"
homepage = "https://github.com/creativcoder/avrow"
documentation = "https://docs.rs/avrow"
readme = "README.md"
keywords = ["avro", "avrow", "rust-avro", "serde-avro","encoding"]
categories = ["encoding", "compression", "command-line-utilities"]

[dependencies]
serde = {version= "1", features=["derive"] }
serde_derive = "1"
serde_json = { version="1", features=["preserve_order"] }
rand = "0.4.2"
byteorder = "1"
integer-encoding = "2"
snap = { version = "0.2", optional = true }
flate2 = { version = "1", features = ["zlib"], default-features = false, optional = true }
crc = "1"
thiserror = "1.0"
indexmap = {version = "1", features = ["serde-1"]}
once_cell = "1.4.1"
zstdd = { version = "0.5.3", optional = true, package="zstd" }
bzip2 = { version = "0.4.1", optional = true }
xz2 = { version = "0.1", optional = true }
shatwo = { version = "0.9.1", optional = true, package="sha2" }
mdfive = { version = "0.7.0", optional = true, package="md5" }

[dev-dependencies]
criterion = "0.2"
pretty_env_logger = "0.4"
fstrings = "0.2"
env_logger = "0.4"
anyhow = "1.0.32"

[[bench]]
name = "primitives"
harness = false

[[bench]]
name = "complex"
harness = false

[[bench]]
name = "schema"
harness = false

[features]
# compression codecs
snappy = ["snap"]
deflate = ["flate2"]
zstd = ["zstdd"]
bzip = ["bzip2"]
xz = ["xz2"]
# fingerprint codecs
sha2 = ["shatwo"]
md5 = ["mdfive"]

codec = ["snappy", "deflate", "zstd", "bzip2", "xz"]
fingerprint = ["sha2", "md5"]
all = ["codec", "fingerprint"]

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
