[package]
name = "avrow-cli"
version = "0.1.0"
authors = ["creativcoder <creativcoders@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
avrow = { path = "../../avrow", features=["all"] }
anyhow = "1.0.32"
structopt = "0.3.20"

[[bin]]
name = "av"
path="src/main.rs"
